app/styles/app.scss
.login-btn {
  border-radius:20px !important;
  color:#fff !important;
}

.col-primary {
  color: #fc4f4f;
}

.img-resize{
  height:auto;
  width:72px !important;
}

.profile-align{
  float:none;
  margin: 0 auto !important;
  width:256px;
}

#tags {
  margin-bottom: 5px;
  height: 25px;
}

.generate-scroll-y{
  max-height:200px;
  overflow-y:scroll;
}

#run-output {
  background:#f5f5f5;
  border-color: #3c3c3c;
  border-width: 1px;
}

#editor {
  width: 100%;
  height: 400px;
}

.arrows li:nth-of-type(1) a { color: hsl(0, 0%, 70%); }
.arrows li:nth-of-type(2) a { color: hsl(0, 0%, 65%); }
.arrows li:nth-of-type(3) a { color: hsl(0, 0%, 50%); }
.arrows li:nth-of-type(4) a { color: hsl(0, 0%, 45%); }

.share-buttons img {
  width: 35px;
  padding: 5px;
  border: 0;
  box-shadow: 0;
  display: inline;
}

.pointer {
  cursor: pointer;
}

span.badge.new {
  color: black !important;
}

.isa_info, .isa_success, .isa_warning, .isa_error {
  padding:12px;

}
.isa_info {
  color: #00529B;
  background-color: #BDE5F8;
}
.isa_success {
  color: #4F8A10;
  background-color: #DFF2BF;
}
.isa_warning {
  color: #9F6000;
  background-color: #FEEFB3;
}
.isa_error {
  color: #D8000C;
  background-color: #FFBABA;
}
.isa_info i, .isa_success i, .isa_warning i, .isa_error i {
  font-size:2em;
  vertical-align:middle;
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}


.width-navigation {
  .container {
    width: 600px;
    margin-right: 0;
  }
}
#main-menu {
  ul li {
    display: inline;
    text-align: center;
  }

  a {
    display: inline-block;
    margin: 0;
    text-decoration: none;
    padding-bottom: 2px;

  }

  hr {
    height: .15rem;
    width: 0;
    margin: 0;
    background: #2e8ece;
    border: none;
    transition: .3s ease-in-out;
    left: 20px;

  }


  .one.active ~ hr {
    width: 15%;
    margin-left: 4%;
  }

  .two:hover ~ hr {
    margin-left: 25%;
    width: 23%;
    display: block;
  }
  .two.active  ~ hr {
    margin-left: 25%;
    width: 25%;
    display: block;
  }

  .three:hover ~ hr {
    margin-left: 56%;
    width: 22%;
    display: block;
  }

  .four:hover ~ hr {
    margin-left: 83%;
    width: 15%;
    display: block;
  }
  .one:hover ~ hr {
    width: 15%;
    margin-left: 4%;
  }

}

.breadcrumb li a {
  color: #cccccc;
}

.contestCard {
  margin-top: 10px;
  display: flex;
  flex-direction: column;
}


.problemCard {
  margin-top: 10px;
}

#custom-input {
  margin-bottom: 10px;
}

.logout-button {
    display: block;
    width: 115px;
    height: 35px;
    background: #9d3030 !important;
    padding: 10px;
    text-align: center;
    border-radius: 5px;
    color: white;
    font-weight: bold;
}

.logout-button:hover {
  color: #9d3030 !important;
  background: white !important;
}


// CSS code for clock


*{ padding:0; margin:0; outline:none;}
body{font-family:"Roboto",Helvetica,Arial,sans-serif;font-size:14px;line-height:1.428571429;color:#333;background-color:#fff}

.terques-bg {
    background: #1fb5ad;
}

.clock-row {
    text-transform: uppercase;
    min-height: 170px;
}

.user-heading {
    color: #fff;
    padding: 30px;
    text-align: center;
}
.user-heading.clock-row {
    padding: 20px;
}
.user-heading.alt {
    display: inline-block;
    width: 100%;
    text-align: left;
}
.clock-row h1 {
    font-size: 22px ;
    font-weight: 400;
    letter-spacing: 1px;
    margin: 0 0 5px 0;
    letter-spacing: 1px;
}
.clock-row p {
    font-size: 16px;
    font-weight: 300;
    color: #fff ;
    margin: 0;
}
ul#clock li{
    border: none;
}

#clock {
    position: relative;
    width: 185px;
    height: 185px;
    margin: -95px auto 0;
    background: url(/images/clockface.png) no-repeat;
    list-style: none;
}

#sec, #min, #hour {
    position: absolute;
    width: 15px;
    height: 185px;
    top: 0px;
    left: 83px;
}

#sec {
    background: url(/images/sechand.png);
    z-index: 3;
    overflow: hidden;
}

#min {
    background: url(/images/minhand.png);
    z-index: 2;
}

#hour {
    background: url(/images/hourhand.png);
    z-index: 1;
}

.ls-closed .bars:after, .ls-closed .bars:before{
   display: none;
}

//-------------

.para {
  margin: 0px 20px 0px 20px;
}

.daily-problem-div{
  height: 220px;
}

.custom-card{
  padding:30px;
}
.contestCard img{
  margin-bottom: auto;

}

.submit-login-message {
    margin-top: 15px;
    color: deeppink;
}

.wrapper-overlay {
  height: 400px;
  width: 100%;
  margin:0 auto;
  float:none;
  background: url('/images/course-3.jpg');
  opacity:0.7;
  color:#f44336;
  text-align:center;
  word-wrap: break-word;
  float:none;
  margin:0 auto;
  border: 1px solid;
}

.time-wrapper {
  height:125px;
  width:500px;
  text-align:center;
  word-wrap: break-word;
  float:none;
  margin:0 auto;
}

.side-align {
  margin-left:5px;
  float:left;
  border:1px solid #f44336;
  border-radius: 10px;
  height:50px;
  width:22%;
  text-align: center;
  padding-top:10px;
}
.upcoming-contest-card {
  padding-left: 0px !important;
  padding-right: 0px !important;
}
.description-overlay {
  float:none;
  margin:0 auto;
  text-align: center;
}
.light-weight {
  font-size: 2em;
  font-weight: 100;
}

.vc-table tr td {
  vertical-align:middle !important;
}

.problem-image-wrapper {
  height: 100px;
  min-height: 100px;
}

.icon-dailycb{
    color: grey;
}

.problem-name-wrapper {
  height: 46px;
}

.caption a {
  margin-top: 10px;
  width: 100%;
}


.breadcrumbs {
  font-size: 1.1em;
  line-height: 1.5;
  margin: 15px;
  padding-left: 0;
  li {
    display: inline;
    color: #fff !important;
    list-style-type: none;
    margin-left: 0;
      a {
        color: #fff !important;
      }
    }
  li:before {
    content: "/";
    padding-right: 3px;
    }
  li:first-child:before {
    content: "";
    padding-right: 0;
    }
  li:last-child {
      a{
        pointer-events: none;
        cursor: default;
      }
    }
}
#chat {
  display: flex;
  flex-direction: column-reverse;
}
.message_section {
  border: 1px solid #dddddd;
  width: 100%;
  height: 420px;
  .row {
    height: 100%;
    #chatbox {
      height: 100%;
    }
  }
}
.chat_area {
  float: left;
  overflow-x: hidden;
  overflow-y: scroll;
  width: 100%;
}
.chat_area li {
  padding: 14px 14px 0;
}
.chat_area li .chat-img1 img {
  height: 40px;
  width: 40px;
}
.chat_area .chat-body1 {

}
.chat-body1 p {
  background: lightgray none repeat scroll 0 0;
  padding: 10px;
  border-radius: 10px;
  margin-top: 31px;
  font-weight:normal !important;
}
.triangular_tip{
    content:'';
    margin-left: 155px;
    margin-top:-16px;
    width: 0;
    height: 0;
    border-top: solid 10px lightgray;
    border-left: solid 10px transparent;
    border-right: solid 10px transparent;
}

.chat_area .admin_chat .chat-body1 {
  margin-left: 0;
  margin-right: 50px;
}
.chat_area li:last-child {
  padding-bottom: 10px;
}
.chat_area li{
  border-bottom:1px dotted #a59a9a;
   padding: 10px !important;
}


.message_write {
  background: #f5f3f3 none repeat scroll 0 0;
  float: left;
  padding: 15px;
  width: 100%;
  margin-bottom: 30px;
}
.chat_time{
  font-size: 10px;
}
.chat_time .material-icons{
   font-size:14px;
}

.message_write textarea.form-control {
  height: 50px;
  padding: 5px;
  border:1px solid lightgray;
}
.chat_sender{
  font-weight: bold;
  font-size:12px;
}

.chat_bottom {
  float: left;
  margin-top: 13px;
  width: 100%;
}
.sub_menu_ > li a, .sub_menu_ > li {
  float: left;
  width:100%;
}
.member_list li:hover {
  background: #428bca none repeat scroll 0 0;
  color: #fff;
  cursor:pointer;
}
.mid-page{
 text-align:center;
  margin-top:300px;
}

// Small Chat
#Smallchat, #Smallchat * {
  right: unset !important;
  left: 0px !important;
}

.countdown-timer-container {
  &, .card {
    padding: 1em;
  }
}
@media (max-width: 767px) {
  .block-header {
    margin-top: 46px;
  }

  .header-right-section {
    width:100%
  }

  .header-right-section .breadcrumbs {
    float:left
  }

  .header-right-section .logout {
    float:right;
    text-align: right;
    margin-top:-10px
  }

  .header-right-section .logout li {
    display:inline-block
  }

  .header-right-section li {
  vertical-align: top !important
  }
}
 .back-button {
   border:none;
   border-radius: 21px;
   padding: 8px;
   margin-bottom: 10px;
}
.problem-result{
   height:20px;
   width:20px;
   position: absolute;
   top: 2px;
   right: 2px;
}
.bars{
  opacity : 1 !important;
}
.wrapper{
  height:100vh;
  width:100%;
  background: #f7bb97;
}
.mid-page-align{
  text-align: center;
    width: auto;
    height: 100px;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
}

.leaderboard-generate-scroll-y{
  max-height:450px;
  overflow-y:scroll;
}

